--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,7 @@ and open the template in the editor.
         <script type="text/javascript" src="js/lib/angular-animate.js"></script>
         <script type="text/javascript" src="js/lib/angular-touch.js"></script>
         <script type="text/javascript" src="js/lib/ui-bootstrap-tpls-1.3.2.min.js"></script>
+        <script type="text/javascript" src="js/lib/bootstrap-datepicker.min.js"></script>
 
         <!-- jQuery library -->
         <script src="js/lib/jquery.min.js"></script>
@@ -42,7 +43,12 @@ and open the template in the editor.
         <link rel="stylesheet" href="css/main.css"/>
 
         <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="css/lib/bootstrap-datepicker.min.css">
+        <link rel="stylesheet" href="css/lib/bootstrap-datepicker.standalone.min.css">
+        <link rel="stylesheet" href="css/lib/bootstrap-datepicker3.min.css">
+        <link rel="stylesheet" href="css/lib/bootstrap-datepicker3.standalon.min.css">
         <link rel="stylesheet" href="css/lib/bootstrap.min.css">
+
 
     </head>
 
